# CMakeList.txt : CMake project for google_test_example, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (google_test_example "google_test_example.cpp" "google_test_example.h")

# TODO: Add tests and install targets if needed.
